# effective-gather

./: .gitignore  CMakeLists.txt  README.md
effective-c++/: CMakeLists.txt  effective_c++_01.cc  effective_c++_02.cc  effective_c++_03.cc  effective_c++_04.cc  effective_c++_06.cc  effective_c++_10.cc  item-03.cc  item-05.cc  item-06.cc  item-07.cc  item-08.cc  item-09.cc  item-10.cc  item-11.cc  item-12.cc  item-13.cc  item-14.cc  item-15.cc  item-16.cc  item-17.cc  item-18.cc  item-19.cc  item-20.cc  item-21.cc  item-22.cc  item-23.cc  item-24.cc  item-25.cc  item-26.cc  item-27.cc  item-28.cc  item-29.cc  item-30.cc  item-32.cc  item-33.cc  item-34.cc  item-36.cc  item-37.cc  item-38.cc  (+3 more)
effective-c++/item-02/: CMakeLists.txt  header.h  item-02.cc
effective-c++/item-04/: CMakeLists.txt  directory.cc  header.h  item-04.cc
effective-c++/item-23/: CMakeLists.txt  webbrower.cc  webbrower.h  webbrowerbookmarks.cc  webbrowerbookmarks.h
effective-c++/item-31/: Address.cc  Address.h  CMakeLists.txt  Date.cc  Date.h  Person.cc  Person.h  PersonImpl.cc  PersonImpl.h  Person_handler.cc  item-31.cc
effective-c++/item-35/: CMakeLists.txt  classic_strategy_pattern.cc  function_strategy_pattern.cc
effective-modern-c++/: CMakeLists.txt  base-1.cc  base-2.cc  effective_modern_c++_01.cc  effective_modern_c++_03.cc  item04.cc  item05.cc  item07.cc  item08.cc  item14.cc  item16.cc  item30.cc  item31.cc  item35.cc  item36.cc  item37.cc  item38.cc  item39.cc  item40.cc
effective-stl-c++/: CMakeLists.txt  effective_stl_01.cc  effective_stl_04.cc  effective_stl_05.cc
more-effective-c++/: CMakeLists.txt
