cmake_minimum_required(VERSION 3.19.2)
project(effective_gather)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

ADD_SUBDIRECTORY(effective-c++)
ADD_SUBDIRECTORY(effective-modern-c++)
ADD_SUBDIRECTORY(effective-stl-c++)
ADD_SUBDIRECTORY(more-effective-c++)
#ADD_SUBDIRECTORY(Effective-Modern-Cpp)
